mylist 수정
