# swagger-output.json
@@ -18,11 +18,11 @@
     },
     {
       "name": "Like",
-      "description": "좋아요 추가, 좋아요,취소"
+      "description": "좋아요 토글,"
     },
     {
       "name": "Mylist",
-      "description": "찜 추가, 찜 취소, 찜한목록"
+      "description": "찜 토글, 찜 한목록"
     },
     {
       "name": "Search",
@@ -311,58 +311,25 @@
         "responses": {}
       }
     },
-    "/api": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "videoUrl": {
-                  "example": "any"
-                },
-                "imgUrl": {
-                  "example": "any"
-                },
-                "title": {
-                  "example": "any"
-                },
-                "content": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": "any"
-                },
-                "director": {
-                  "example": "any"
-                },
-                "actor": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/movies": {
       "get": {
         "tags": [
           "Movie"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -379,17 +346,25 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/api/movie/{movieId}/like": {
-      "post": {
+      "put": {
         "tags": [
           "Like"
         ],
@@ -415,29 +390,10 @@
             "description": "Unauthorized"
           }
         }
-      },
-      "delete": {
-        "tags": [
-          "Like"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "movieId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
       }
     },
     "/api/movie/{movieId}/mylist": {
-      "post": {
+      "put": {
         "tags": [
           "Mylist"
         ],
@@ -448,30 +404,19 @@
             "in": "path",
             "required": true,
             "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Mylist"
-        ],
-        "description": "",
-        "parameters": [
+          },
           {
-            "name": "movieId",
-            "in": "path",
-            "required": true,
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -482,10 +427,19 @@
           "Mylist"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -501,6 +455,11 @@
             "name": "title",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -509,6 +468,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
